gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/call_function_type.d
version https://git-lfs.github.com/spec/v1
oid sha256:eec7b5e9bcd58e74feaf434e73f1f8b11758f8fd756d5078ee9d1821e68f8a8c
size 591
